--- a/02-experiments/public/sample-jspsych-experiment/experiment.html
+++ b/02-experiments/public/sample-jspsych-experiment/experiment.html
@@ -6,6 +6,7 @@
     <script src="jspsych-6.3.0/plugins/jspsych-html-keyboard-response.js"></script>
     <script src="jspsych-6.3.0/plugins/jspsych-image-keyboard-response.js"></script>
     <script src="jspsych-6.3.0/plugins/jspsych-preload.js"></script>
+    <script src="../exbuilder.js"></script> <!-- EXBUILDER JS  -->
     <link href="jspsych-6.3.0/css/jspsych.css" rel="stylesheet" type="text/css">
   </head>
   <body></body>
@@ -25,10 +26,9 @@
     var welcome = {
       type: "html-keyboard-response",
       stimulus: "Welcome to the experiment. Press any key to begin.",
-      /************** EXBUILDER'S INSERT RUN *********************/
-      on_finish: function(){
-
-      }
+      on_finish: function(){ 
+          Exbuilder.insertRun(); // ADDS RUN TO EXBUILDER'S DATABASE
+        } 
     };
     timeline.push(welcome);
 
@@ -115,6 +115,7 @@
     jsPsych.init({
       timeline: timeline,
       on_finish: function() {
+        Exbuilder.updateRun(jsPsych.data.get().json());  // ADDS STUDY DATA TO RUN IN EXBUILDER DATABASE
         jsPsych.data.displayData();
       }
     });
