--- a/02-experiments/public/sample-jspsych-experiment/experiment.html
+++ b/02-experiments/public/sample-jspsych-experiment/experiment.html
@@ -6,7 +6,7 @@
     <script src="jspsych-6.3.0/plugins/jspsych-html-keyboard-response.js"></script>
     <script src="jspsych-6.3.0/plugins/jspsych-image-keyboard-response.js"></script>
     <script src="jspsych-6.3.0/plugins/jspsych-preload.js"></script>
-    <script src="../exbuilder.js"></script> <!-- EXBUILDER JS  -->
+    <script src="../exbuilder/exbuilder.js"></script> <!-- EXBUILDER JS  -->
     <link href="jspsych-6.3.0/css/jspsych.css" rel="stylesheet" type="text/css">
   </head>
   <body></body>
