--- a/02-experiments/index.html
+++ b/02-experiments/index.html
@@ -1,2 +1,23 @@
 Welcome to exbuilder's experiment server!
 
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>exbuilder</title>
+    <!-- Bootstrap å! -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+    <script src="../exbuilder/exbuilder.js"></script> <!-- EXBUILDER JS  -->
+  </head>
+  <body>
+    <div class="container position-absolute top-50 start-50 translate-middle">
+  
+        <h1 class="display-4 text-center">Welcome to exbuilder's experiment server! </h1>
+        <p class="lead text-center">
+            Underneath this we will load the form to generate URLs.
+        </p>
+    </div>
+
+
+  </body>
+</html>
