--- a/02-experiments/experiment2-pcibex/experiment.html
+++ b/02-experiments/experiment2-pcibex/experiment.html
@@ -8,10 +8,10 @@
     <script src="../exbuilder/exbuilder.js"></script> <!-- EXBUILDER JS  -->
   </head>
   <body>
-    <div class="container">
+    <div class="container position-absolute top-50 start-50 translate-middle">
   
-        <h1 class="display-4">Experiment 2 PCIbex </h1>
-        <p class="lead">
+        <h1 class="display-4 text-center">Experiment 2 PCIbex </h1>
+        <p class="lead text-center">
             This will be a sample PCIbex experiment to demonstrate using PCIbex with exbuilder.
         </p>
     </div>
