config-exbuilder.json

--- a/02-experiments/experiment1-jspsych/experiment.html
+++ b/02-experiments/experiment1-jspsych/experiment.html
@@ -11,6 +11,8 @@
   </head>
   <body></body>
   <script>
+    /* INITIALIZE EXBUILDER -- let exbuilder know you want to use it */
+    Exbuilder.init();
 
     /* create timeline */
     var timeline = [];
