--- a/02-experiments/index.html
+++ b/02-experiments/index.html
@@ -9,13 +9,65 @@
   </head>
   <body>
     <div class="container position-absolute top-50 start-50 translate-middle">
-  
-        <h1 class="display-4 text-center">Welcome to exbuilder's experiment server! </h1>
-        <p class="lead text-center">
-            Underneath this we will load the form to generate URLs.
-        </p>
+        <div class="row justify-content-md-center">
+            <div class="col-sm-4 text-center">
+                <h1 id="exbuilder-title" class="display-4 text-center">exbuilder</h1>
+                <p id="exbuilder-description" class="lead text-center">Welcome to exbuilder's webserver. Customize your landing page with config-exbuilder.json</p>
+            </div>
+        </div>
+        <div class="row justify-content-md-center">
+            <div class="card col-sm-4">
+                <div class="card-body">
+                    <form>
+                        <div class="row mb-3">
+                            <select class="form-select">
+                                <option>experiment</option>
+                                <option>experiment 1 jspsych</option>
+                                <option>experiment 2 pcibex</option>
+                              </select>
+                        </div>
+                        <div class="row mb-3">
+                            <select class="form-select">
+                                <option>researcher</option>
+                                <option>dorothy</option>
+                                <option>tin man</option>
+                              </select>
+
+                        </div>
+                        <div class="row mb-3">
+                            <select class="form-select">
+                                <option>location</option>
+                                <option>oz</option>
+                                <option>kansas</option>
+                              </select>
+
+                        </div>
+                        <div class="row mb-3">
+                            <select class="form-select">
+                                <option>source database</option>
+                                <option>prolific</option>
+                                <option>sona</option>
+                                <option>salesforce</option>
+
+                              </select>
+
+                        </div>
+                        <div class="row mb-3">
+                            <input class="form-control" type="text" placeholder="participant id" aria-label="default input example">
+
+                        </div>
+
+                            <button type="submit" class="btn btn-primary">Copy URL</button>
+                            <button type="submit" class="btn btn-primary">Run</button>
+
+                      </form>
+                </div>
+              </div>
+
+        </div>
     </div>
-
-
   </body>
 </html>
+<script>
+    Exbuilder.init("landingpage")
+</script>
