--- a/Experiments/experiment2-jspsych-recordaudio/experiment.html
+++ b/Experiments/experiment2-jspsych-recordaudio/experiment.html
@@ -17,7 +17,7 @@
     Exbuilder.init();
 
     /* INITIALIZE EXBUILDER's AUDIO RECORDER */
-    //ExbuilderAudioRecorder.init();
+    ExbuilderAudioRecorder.init();
 
     /* create timeline */
     var timeline = [];
@@ -79,8 +79,8 @@
         task: 'fixation'
       },
       on_finish: function(){
-        // START RECORDING AT THE FIXATION POINT
-        //ExbuilderAudioRecorder.startRecording();
+        // START RECORDING AFTER THE FIXATION POINT
+        ExbuilderAudioRecorder.startRecording();
       }
     }
 
@@ -94,8 +94,10 @@
       },
       on_finish: function(data){
         data.correct = jsPsych.pluginAPI.compareKeys(data.response, data.correct_response);
+
         // STOP RECORDING AT THE FIXATION POINT, save data in a folder for the randomid
-       // ExbuilderAudioRecorder.stopRecording(Exbuilder.run.randomid+"/trial_"+ExbuilderAudioRecorder.trial+".wav");
+        var filename = Exbuilder.run.randomid+"/trial_"+ExbuilderAudioRecorder.trial;
+        ExbuilderAudioRecorder.stopRecording(filename);
       }
     }
 
